--- a/参考代码.ipynb
+++ b/参考代码.ipynb
@@ -12,7 +12,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "1GTFEHaQY4E92hygbZgqMwMnFARLdLhuk",
-      "authorship_tag": "ABX9TyO4EVDwlWCjyNWKZeEeB4YR",
+      "authorship_tag": "ABX9TyMljFY9cq3S7lxICYGIK2iu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,59 +360,9 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "def compare_plot(y_true, y_pred, start_index=None, end_index=None):\n",
-        "    start, end = start_index, end_index\n",
-        "    if start is None:\n",
-        "        start = 0\n",
-        "    else:\n",
-        "        start *= 96\n",
-        "    if end is None:\n",
-        "        end = -1\n",
-        "    else:\n",
-        "        end *= 96\n",
-        "    fig, ax = plt.subplots(figsize=(30, 12))\n",
-        "    ax.set_xlabel('Time', fontsize=16)\n",
-        "    ax.plot(y_true[start: end], label='true value')\n",
-        "    ax.plot(y_pred[start: end], label='predict value', linestyle='-', linewidth=1)\n",
-        "\n",
-        "    ax.legend()\n",
-        "    plt.show()\n",
-        "\n",
-        "\n",
-        "def post_process(y_pred):\n",
-        "    ret = []\n",
-        "    for i in y_pred:\n",
-        "        if i < 0:\n",
-        "            ret.append(0)\n",
-        "        elif i > 1500:\n",
-        "            ret.append(1500)\n",
-        "        else:\n",
-        "            ret.append(i)\n",
-        "    return ret\n",
-        "\n",
-        "\n",
-        "def filtered_mape(y_true: list, y_pred: list):\n",
-        "    \"\"\"为了使mape的值更加合理，过滤掉其中的0值\"\"\"\n",
-        "    y_true_filtered, y_pred_filtered = [], []\n",
-        "    for i in range(len(y_true)):\n",
-        "        if y_true[i] != 0:\n",
-        "            y_true_filtered.append(y_true[i])\n",
-        "            y_pred_filtered.append(y_pred[i])\n",
-        "            \n",
-        "    return mean_absolute_percentage_error(y_true_filtered, y_pred_filtered)"
-      ],
-      "metadata": {
-        "id": "Heja6alQ5URQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "### 4.1.1 Random Forest（不涉及历史值）"
+        "### 4.1.1 Random Forest"
       ],
       "metadata": {
         "id": "w5Z8BBufscD3"
@@ -469,7 +419,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.1.2 XGBoost Normal（不涉及历史值）"
+        "### 4.1.2 XGBoost Normal"
       ],
       "metadata": {
         "id": "fDEVL0EhmYYo"
@@ -504,7 +454,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.1.3 XGBoost（涉及历史值）\n",
+        "### 4.1.3 XGBoost\n",
         "\n",
         "价格的影响具有长期性。因此，在预测未来的价格时，需要考虑历史价格的影响。结合当前电力市场的现状，将每三天的价格数据看做一个待预测的点，这样预测得到的价格也包含了三天的值，可以供日前申报使用。"
       ],
@@ -1322,7 +1272,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.2.3 CNN"
+        "### 4.2.3 CNN\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "> 当前效果较差\n"
       ],
       "metadata": {
         "id": "aixpfSn2AkO8"
