--- a/参考代码.ipynb
+++ b/参考代码.ipynb
@@ -7,12 +7,13 @@
       "provenance": [],
       "collapsed_sections": [
         "PScUVz69c7s5",
-        "dzovoIq4Pf-l",
+        "oaj0WSWiZHPu",
+        "w5Z8BBufscD3",
         "pBbdysRRShPk"
       ],
       "toc_visible": true,
       "mount_file_id": "1GTFEHaQY4E92hygbZgqMwMnFARLdLhuk",
-      "authorship_tag": "ABX9TyMljFY9cq3S7lxICYGIK2iu",
+      "authorship_tag": "ABX9TyN1vHOCsomhDogcde3EGjQc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -442,7 +443,7 @@
       "source": [
         "xgb_y_pred = model.predict(test_X)\n",
         "xgb_y_pred = post_process(xgb_y_pred)\n",
-        "compare_plot(test_y.values, rf_pred, 0, 3)\n",
+        "compare_plot(test_y, xgb_y_pred, 0, 3)\n",
         "print('mape: ', filtered_mape(test_y.values, xgb_y_pred))"
       ],
       "metadata": {
@@ -456,7 +457,7 @@
       "source": [
         "### 4.1.3 XGBoost\n",
         "\n",
-        "价格的影响具有长期性。因此，在预测未来的价格时，需要考虑历史价格的影响。结合当前电力市场的现状，将每三天的价格数据看做一个待预测的点，这样预测得到的价格也包含了三天的值，可以供日前申报使用。"
+        "与4.2节中描述的深度学习模型的特点类似。在预测未来的价格时，需要考虑历史数据的影响。"
       ],
       "metadata": {
         "id": "9ppXn0tiaXx_"
@@ -466,7 +467,7 @@
       "cell_type": "code",
       "source": [
         "def create_dataset(all_df, input_days, output_days=3,\n",
-        "                   target_col='price'):\n",
+        "                   target_col='price', use_out_features=False):\n",
         "    \"\"\"\n",
         "    从原始数据中处理得到数据集\n",
         "    all_df: 原始数据集\n",
@@ -475,11 +476,14 @@
         "    target_col: 目标列的名称\n",
         "    \"\"\"\n",
         "    in_window = input_days * 96\n",
-        "    out_window = output_days * 96\n",
+        "    out_window = output_days\n",
         "    in_data = []\n",
         "    out_data = []\n",
         "    for i in tqdm(range(len(all_df)-in_window-out_window)):\n",
-        "        in_data.append(all_df.iloc[i: i+in_window, :].values)\n",
+        "        if use_out_features:\n",
+        "            in_data.append(all_df.drop(target_col, axis=1).iloc[i: i+in_window+out_window, :].values)\n",
+        "        else:\n",
+        "            in_data.append(all_df.iloc[i: i+in_window, :].values)\n",
         "        out_data.append(all_df[target_col].iloc[i+in_window: i+in_window+out_window].values)\n",
         "    return np.array(in_data), np.array(out_data)"
       ],
@@ -492,7 +496,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X, y = create_dataset(all_df, 4)"
+        "X, y = create_dataset(all_df, 3, 1, use_out_features=True)"
       ],
       "metadata": {
         "id": "3OOvHtGzwhnp"
@@ -503,18 +507,36 @@
     {
       "cell_type": "code",
       "source": [
-        "# 按照7:1:2的比例划分为训练集、验证集和测试集\n",
-        "data_len = X.shape[0]\n",
-        "train_size = int(data_len * .7)\n",
-        "val_size = int(data_len * .1)\n",
-        "test_size = data_len - train_size - val_size\n",
+        "# # 定义部分 # #\n",
+        "train_data_size = 0.75\n",
+        "eval_data_size = 0.25\n",
+        "test_data_size = 96\n",
+        "# # # #\n",
         "\n",
-        "train_X = X[:train_size]\n",
-        "train_y = y[:train_size]\n",
-        "val_X = X[train_size: train_size+val_size]\n",
-        "val_y = y[train_size: train_size+val_size]\n",
-        "test_X = X[train_size+val_size: train_size+val_size+test_size]\n",
-        "test_y = y[train_size+val_size: train_size+val_size+test_size]"
+        "assert isinstance(train_data_size, float)\n",
+        "assert isinstance(eval_data_size, float)\n",
+        "assert isinstance(test_data_size, (float, int))\n",
+        "\n",
+        "data_len = X.shape[0]\n",
+        "if isinstance(test_data_size, float):\n",
+        "    assert train_data_size + eval_data_size + test_data_size == 1\n",
+        "    train_data_size = int(data_len * train_data_size)\n",
+        "    eval_data_size = int(data_len * eval_data_size)\n",
+        "    test_data_size = data_len - train_data_size - eval_data_size\n",
+        "else:\n",
+        "    assert train_data_size + eval_data_size == 1\n",
+        "    data_len -= test_data_size\n",
+        "    train_data_size = int(data_len * train_data_size)\n",
+        "    eval_data_size = data_len - train_data_size\n",
+        "\n",
+        "train_X = X[:train_data_size]\n",
+        "train_y = y[:train_data_size]\n",
+        "\n",
+        "eval_X = X[train_data_size: train_data_size+eval_data_size]\n",
+        "eval_y = y[train_data_size: train_data_size+eval_data_size]\n",
+        "\n",
+        "test_X = X[train_data_size+eval_data_size: train_data_size+eval_data_size+test_data_size]\n",
+        "test_y = y[train_data_size+eval_data_size: train_data_size+eval_data_size+test_data_size]"
       ],
       "metadata": {
         "id": "GKRv9KHuztzz"
@@ -526,7 +548,7 @@
       "cell_type": "code",
       "source": [
         "train_X = train_X.reshape(-1, train_X.shape[1] * train_X.shape[2])\n",
-        "val_X = val_X.reshape(-1, val_X.shape[1] * val_X.shape[2])\n",
+        "eval_X = eval_X.reshape(-1, eval_X.shape[1] * eval_X.shape[2])\n",
         "test_X = test_X.reshape(-1, test_X.shape[1] * test_X.shape[2])"
       ],
       "metadata": {
@@ -538,50 +560,16 @@
     {
       "cell_type": "code",
       "source": [
-        "print(train_X.shape)\n",
-        "print(train_y.shape)"
-      ],
-      "metadata": {
-        "id": "IUTIAb880qIm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "all_df['price'].iloc[0+96*4: 0+96*4+96*3]"
-      ],
-      "metadata": {
-        "id": "rEBvDd27EtYK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_y[0]"
-      ],
-      "metadata": {
-        "id": "p-yWaRIPEa_P"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "param = {'eta': 0.03, 'max_depth': 180, \n",
         "         'subsample': 1, 'colsample_bytree': 0.95, \n",
         "         'alpha': 0.1, 'lambda': 0.15, 'gamma': 0.1,\n",
-        "         'objective': 'reg:linear', 'eval_metric': 'rmse', \n",
+        "         'objective': 'reg:squarederror', 'eval_metric': 'rmse', \n",
         "         'silent': 1, 'min_child_weight': 0.1, 'n_jobs': -1}\n",
         "\n",
         "dtrain = xgb.DMatrix(train_X, train_y)\n",
-        "dval = xgb.DMatrix(val_X, val_y)\n",
+        "dval = xgb.DMatrix(eval_X, eval_y)\n",
         "dtest = xgb.DMatrix(test_X)\n",
-        "eval_list = [(dtrain, 'train'), (dval, 'eval')]"
+        "eval_list = [(dval, 'eval'), (dtrain, 'train')]"
       ],
       "metadata": {
         "id": "iUKS-kACadYS"
@@ -592,7 +580,7 @@
     {
       "cell_type": "code",
       "source": [
-        "xgb_model = xgb.train(param, dtrain, 180, eval_list, early_stopping_rounds=3)"
+        "xgb_model = xgb.train(param, dtrain, 150, eval_list, early_stopping_rounds=3)"
       ],
       "metadata": {
         "id": "MWH1YFlUjH02"
@@ -609,11 +597,33 @@
         "\n",
         "forecast = xgb_model.predict(dtest)\n",
         "forecast = post_process(forecast)\n",
-        "compare_plot(test_y[0], forecast[:288], 0, 3)\n",
-        "print('mape: ', filtered_mape(test_y.values, forecast))"
+        "compare_plot(test_y, forecast)\n",
+        "print('mape: ', filtered_mape(test_y, forecast))"
       ],
       "metadata": {
         "id": "Wsm_o1uCae-X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_y"
+      ],
+      "metadata": {
+        "id": "eviLHVcIyAYr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_df['price'][96*9: 96*10].values"
+      ],
+      "metadata": {
+        "id": "ZqBP6rhQaQ9v"
       },
       "execution_count": null,
       "outputs": []
